Fixed action buttons not visible by adding scrolling capability to the sidebar

--- a/css/main_style.css
+++ b/css/main_style.css
@@ -121,6 +121,7 @@ h1{
   top: 0;
   background: #f0f0f0;
   z-index: 1;
+  overflow-y : scroll;
   -webkit-transition-property: -webkit-transform;
   -moz-transition-property: -moz-transform;
   transition-property: transform;
